--- a/src/ItemList/ItemList.css
+++ b/src/ItemList/ItemList.css
@@ -33,3 +33,10 @@
 	flex-direction: column;
 	align-items: center;
 }
+
+#addWrapper{
+	width: 100%;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+}
