--- a/src/Item/Item.css
+++ b/src/Item/Item.css
@@ -18,3 +18,15 @@
 #wrapper{
 	width: 80%;
 }
+
+#endWrapper{
+	width: 15vw;
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+}
+
+#delIcon{
+	margin-top: 5px;
+	color: #ad3535;
+}
