--- a/frontend/src/CheckBtn/CheckBtn.css
+++ b/frontend/src/CheckBtn/CheckBtn.css
@@ -1,11 +1,11 @@
 .check{
-	border: 2px solid #555555;
-	width: 20px;
-	height: 20px;
-	border-radius: 10px;
-	margin-top: 10px;
-	margin-bottom: 5px;
+	margin: .25em .4em; 
+	width: 1em;
+	height: 1em;
+	border-radius: 2em;
 	transition: .2s;
 	-webkit-tap-highlight-color:  transparent;
 	cursor: pointer;
+	background-color: #eeeeee;
+	box-shadow: 0 0 .35em #999999;
 }
