--- a/frontend/src/Item/Item.css
+++ b/frontend/src/Item/Item.css
@@ -1,21 +1,17 @@
-#divider{
-	background-color: black;
-	width: 100%;
-	height: 1px;
-}
-
 #inner{
+	width: 80%;
 	display: flex;
 	flex-direction: row;
 	justify-content: space-between;
 	align-items: center;
+	font-size: 1em;
+	font-weight: 300;
+	height: 1.5em;
+	background-color: #eeeeee;
+	box-shadow: 0 .1em 1em #888888;
+	margin: .3em;
+	padding: 0 0 0 .5em;
+	border-radius: 1em;
 }
 
-#wrapperItem{
-	width: 100%;
-}
-
-#wrapper{
-	width: 80%;
-}
 
