--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,7 +1,10 @@
+@import url('https://fonts.googleapis.com/css?family=Lato:300');
+
 html, body{
 	height: 100vh;
 	width: 100vw;
 	margin: 0;
+	font-family: 'Lato', sans-serif;
 }
 
 #root{
