--- a/frontend/src/Btns/Btn/Btn.css
+++ b/frontend/src/Btns/Btn/Btn.css
@@ -2,13 +2,12 @@
 	display: flex;
 	justify-content: center;
 	align-items: center;
-	background-color: #333333;
-	width: 3em;
-	height: 3em;
+	background-color: none;
+	padding: .5em;
 	border-radius: 2em;
 }
 
 #icon{
-	color: white;
+	color: #535353;
 	font-size: 2em;
 }
