--- a/frontend/src/BtnBar/BtnBar.css
+++ b/frontend/src/BtnBar/BtnBar.css
@@ -4,16 +4,15 @@
 	display: flex;
 	justify-content: center;
 	align-items: center;
-	background-image: linear-gradient(rgba(255, 255, 255, 0.1), rgba(255, 255, 255, 1));
+	background-image: linear-gradient(#ffffff01, #ffffffff);
 	padding-top: 3em;
 }
 
 #bar{
 	display: flex;
 	justify-content: space-between;
-	width: 10em;
+	align-items: center;
+	width: 8em;
 	height: 3em;
-	background-color: #535353;
 	border-radius: 2em;
-	box-shadow: 0 0 .5em  black;
 }
