--- a/frontend/src/BtnBar/BtnBar.css
+++ b/frontend/src/BtnBar/BtnBar.css
@@ -10,9 +10,17 @@
 
 #bar{
 	display: flex;
-	justify-content: space-between;
+	justify-content: space-around;
 	align-items: center;
 	width: 8em;
-	height: 3em;
+	height: 2em;
 	border-radius: 2em;
+	background-color: #444444;
+}
+
+#divider{
+	width: 2px;
+	height: 75%;
+	background-color: #ffffff;
+	border-radius: 1em;
 }
