--- a/frontend/src/TextBox/TextBox.css
+++ b/frontend/src/TextBox/TextBox.css
@@ -1,15 +1,20 @@
 #searchWrapper{
-	width: 185px;
-	height: 35px;
+	width: 10em;
+	height: 2em;
 	display: flex;
-	justify-content: flex-end;
+	justify-content: center;
 	align-items: center;
 }
 
 #textBox{
-	padding: 5px;
-	color: #555555;
+	color: #ffffff;
 	border: none;
-	border-radius: 3px;
-	background-color: #ffffff;
-}
+	width: 7.875em;
+	height: 2.25em;
+	border-radius: 2em;
+	background-color: #444444;
+	font-family: 'Roboto', sans-serif;
+	text-indent: .5em;
+	outline: none;
+	transition: .2s;
+} 
