--- a/frontend/src/TextBox/TextBox.css
+++ b/frontend/src/TextBox/TextBox.css
@@ -1,5 +1,5 @@
 #searchWrapper{
-	width: 10em;
+	width: 100%;
 	height: 2em;
 	display: flex;
 	justify-content: center;
@@ -14,7 +14,7 @@
 	border-radius: 2em;
 	background-color: #444444;
 	font-family: 'Roboto', sans-serif;
-	text-indent: .5em;
+	text-indent: 1em;
 	outline: none;
 	transition: .2s;
 } 
