--- a/frontend/src/TopBar/TopBar.css
+++ b/frontend/src/TopBar/TopBar.css
@@ -1,7 +1,9 @@
 #topBase{
 	width: 100%;
 	display: flex;
+	align-items: center;
 	justify-content: center;
+	flex-direction: row;
 }
 
 #heading{
@@ -9,7 +11,12 @@
 	text-align: center;
 	font-size: 2em;
 	font-weight: 300;
-	padding: 1em 0;
+	margin: 1em .5em;
 	border-radius: .2em;
 	text-transform: uppercase;
+}
+
+.topBarLine{
+	width: 100%;
+	height: .6em;
 }
