--- a/frontend/src/InnerBar/InnerBar.css
+++ b/frontend/src/InnerBar/InnerBar.css
@@ -1,16 +1,19 @@
 #bar{
 	display: flex;
-	justify-content: space-around;
+	justify-content: center;
 	align-items: center;
-	width: 7em;
-	height: 2em;
+	width: 8em;
+	height: 2.5em;
 	border-radius: 2em;
 	background-color: #444444;
+	box-shadow: .2em .2em 1em #888888;
+	margin-bottom: 1em;
 }
 
 #divider{
 	width: 2px;
-	height: 75%;
+	height: 70%;
 	background-color: #ffffff;
 	border-radius: 1em;
+	margin: 0 .8em;
 }
