--- a/frontend/src/Item/Item.css
+++ b/frontend/src/Item/Item.css
@@ -1,5 +1,6 @@
 #itemCon{
 	width: 80%;
+	border-top: 1px solid #aaaaaa;
 }
 
 #inner{
@@ -9,7 +10,7 @@
 	flex-direction: row;
 	justify-content: space-between;
 	align-items: center;
-	font-size: 1em;
+	font-size: 1.2em;
 	height: 1.6em;
 	margin: .3em;
 	border-radius: 1em;
@@ -19,8 +20,29 @@
 	margin: 0 .8em 0 0;
 }
 
-.divider{
-	height: 1px;
-	width: 100%;
-	background-color: #aaaaaa;
+.itemData{
+	height: 100%;
+	display: flex;
+	justify-content: flex-end;
+	align-items: center;
+}
+
+.deleteItem{
+	height: 80%;
+	width: 0;
+	background-color: #ff6666;
+	border-radius: 1em;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+}
+
+.itemDeleteText{
+	color: #ffffff;
+	margin: 0;
+	font-size: .8em;
+	opacity: 0;
+	display: flex;
+	justify-content: flex-end;
+
 }
