--- a/frontend/src/ItemList/ItemList.css
+++ b/frontend/src/ItemList/ItemList.css
@@ -1,6 +1,6 @@
 #baseItemList{
 	width: 100%;
-	height: 80%;
+	height: 100%;
 	display: flex;
 	justify-content: center;
 }
@@ -28,12 +28,15 @@
 	-webkit-tap-highlight-color:  transparent; 
 }
 
-#itemWrapper{
+#itemContainer{
 	width: 100%;
-	height: 75%;
+	height: 100%;
 	display: flex;
 	flex-direction: column;
 	align-items: center;
+	overflow-y: scroll;
+	padding-bottom: 12em;
+	padding-top: 9em;
 }
 
 #addWrapper{
@@ -42,12 +45,16 @@
 	display: flex;
 	justify-content: center;
 	align-items: center;
+	position: absolute;
+	bottom: 0;
 }
 
 #btnBar{
 	
 }
 
-#divider{
+#itemDivider{
 	width: 80%;
+	height: 5px;
+	background-color: #555555;
 }
