--- a/frontend/src/Menu/Menu.css
+++ b/frontend/src/Menu/Menu.css
@@ -1,18 +1,67 @@
 #menuContainer{
 	width: 100%;
 	height: 100%;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
 }
 
-.singleAddBtnContainer{
-	width: 2em;
-	height: 2em;
-	border-radius: 1em;
+#menuListSpacerTop{
+	width: 100%;
+	height: 1.8em;
+	position: absolute;
+	top: 0;
+	background-image: linear-gradient(#ffffffff, #ffffff00);
+	z-index: 1;
+}
+
+#menuListContainer{
+	/*
+	width: 100%;
+	height: auto;
+	display: flex;
+	justify-content: flex-start;
+	flex-direction: column;
+	align-items: center;
+	padding-bottom: 10em;
+	padding-top: 1.8em;
+	overflow-y: scroll !important;
+	*/
+	width: 100%;
+	height: 100%;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	padding: 1.5em 0 12em 0;
+	overflow-y: scroll;
+}
+
+.spacer{
+	height: 1.8em;
+	width: 100%;
+}
+
+#addListContainer{
+	width: 100%;
+	height: 20%;
+	display: flex;
+	justify-content: center;
+	align-items: flex-end;
+	position: absolute;
+	bottom: 0;
+	background-image: linear-gradient(#ffffff00, #ffffffff);
+
+}
+
+#menuAddBtn{
+	width: 3em;
+	height: 3em;
+	border-radius: 2em;
 	background-color: #444444;
 	display: flex;
 	justify-content: center;
 	align-items: center;
-}
-
-.singleBtn{
+	margin-bottom: 1em;
+	box-shadow: .2em .2em 1em #888888;
 
 }
