--- a/frontend/src/TextBox/TextBox.css
+++ b/frontend/src/TextBox/TextBox.css
@@ -1,20 +1,64 @@
 #searchWrapper{
 	width: 100%;
-	height: 2em;
+	height: 4em;
 	display: flex;
 	justify-content: center;
-	align-items: center;
+	align-items: flex-end;
+	padding-bottom: 1em;
 }
 
 #textBox{
 	color: #ffffff;
 	border: none;
-	width: 7.875em;
-	height: 2.25em;
-	border-radius: 2em;
+	width: 80%;
+	height: 100%;
 	background-color: #444444;
-	font-family: 'Roboto', sans-serif;
-	text-indent: 1em;
+	font-family: 'Lato', sans-serif;
+	font-size: 1em;
+	text-indent: .5em;
 	outline: none;
-	transition: .2s;
+	padding: 0;
 } 
+
+#searchCon{
+	width: 60%;
+	height: 2.5em;
+	display: flex;
+	justify-content: center;
+	flex-direction: row;
+	align-items: center;
+	background-color: #444444;
+	border-radius: 3em;	
+	box-shadow: .2em .2em 1em #888888;
+	
+}
+
+#letter_x_textBoxCon{
+	width: 20%;
+	height: 100%;
+	background-color: #444444;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	border-top-left-radius: 2em;
+	border-bottom-left-radius: 2em;
+}
+
+#letter_x_addItem{
+	width: 45%;
+}
+
+#tick_textBoxCon{
+	width: 20%;
+	height: 100%;
+	background-color: #444444;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	border-top-right-radius: 2em;
+	border-bottom-right-radius: 2em;
+}
+
+#tick_addItem{
+	width: 50%;
+}
