--- a/frontend/src/TopBar/TopBar.css
+++ b/frontend/src/TopBar/TopBar.css
@@ -1,10 +1,14 @@
 #topBase{
 	width: 100%;
 	height: 20%;
+	position: absolute;
+	top: 0;
 	display: flex;
 	align-items: center;
 	justify-content: center;
-	flex-direction: row;
+	flex-direction: column;
+	background-image: linear-gradient(#ffffffff, #ffffffff, #ffffffff, #ffffff00);
+	z-index: 1;
 }
 
 #heading{
@@ -12,9 +16,7 @@
 	text-align: center;
 	font-size: 2.5em;
 	font-weight: 300;
-	margin: 1em .5em;
-	border-radius: .2em;
-	text-transform: uppercase;
+	margin: 0;
 }
 
 .topBarLine{
